--- a/Escrito/src/App.css
+++ b/Escrito/src/App.css
@@ -13,3 +13,17 @@
   flex-direction: column;
   align-items: center;
 }
+
+input {
+  border-radius: 30px;
+  margin: 5px;
+  padding: 6px;
+}
+
+button {
+  background-color: #e79eff;
+  color: black;
+  width: 40%;
+  height: 30%;
+  border-radius: 30px;
+}
